[tool.poetry]
name = "logrepl"
version = "0.1.0"
description = ""
authors = ["bali <balihsu@accudata.com.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
pylogrepl = 'logrepl.run:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
